Introducing analyzers to FlatFile.
CsvParser.toCsvText is parsing one SortedMapWritable at a time (cannot
iterater an Iterable twice).

RowsUtils.printSortedMapWritable introduced.